--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: Tanha;
-  src: url("font/Tanha.eot");
-  src: url("font/Tanha.woff") format("woff"),
-    url("font/Tanha.ttf") format("truetype");
+  src: url('font/Tanha.eot');
+  src: url('font/Tanha.woff') format('woff'),
+    url('font/Tanha.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -54,7 +54,7 @@ main {
 }
 
 main::after {
-  content: "";
+  content: '';
   display: block;
   position: fixed;
   top: 0;
@@ -62,16 +62,17 @@ main::after {
   right: 0;
   bottom: 0;
   z-index: 3;
-  background-color: #E00F48;
+  background-color: #e00f48;
   opacity: 0.3;
 }
 
 .playlist-wrapper {
+  margin: 3px;
   position: relative;
   z-index: 50;
   max-width: 420px;
   margin: 20px auto;
-  background-color: #E00F48;
+  background-color: #e00f48;
   padding: 20px;
 }
 
@@ -81,16 +82,16 @@ main::after {
 }
 
 .playlist-wrapper hr {
-  border: 1px solid #F4EAD5;
+  border: 1px solid #f4ead5;
   width: 20%;
   margin-bottom: 20px;
 }
 
 h1 {
   font-size: 2rem;
-  color: #F4EAD5;
+  color: #f4ead5;
   margin-top: 0;
   margin-bottom: 0;
   text-align: center;
-  font-family: "Barrio", Georgia, cursive;
+  font-family: 'Barrio', Georgia, cursive;
 }
