--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: Pacifico;
+  src: url('./Pacifico-Regular.ttf') format('truetype');
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -19,6 +24,12 @@
   font-family: Tanha;
   text-align: right;
   direction: rtl;
+}
+
+.en {
+  font-family: Pacifico;
+  text-align: left;
+  direction: ltr;
 }
 
 html {
@@ -62,18 +73,31 @@ main::after {
   right: 0;
   bottom: 0;
   z-index: 3;
-  background-color: #e00f48;
+  /* background-color: #e00f48; */
   opacity: 0.3;
 }
 
+main {
+  padding: 10px;
+}
+
 .playlist-wrapper {
-  margin: 3px;
+  /* margin: 10px !important; */
   position: relative;
   z-index: 50;
   max-width: 420px;
   margin: 20px auto;
-  background-color: #e00f48;
   padding: 20px;
+  background: rgba(255, 255, 255, 0.29);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7.1px);
+  -webkit-backdrop-filter: blur(7.1px);
+  border: 1px solid rgba(255, 255, 255, 0.45);
+}
+
+.playlist-wrapper p {
+  color: #1a1919;
 }
 
 .playlist-wrapper iframe {
@@ -94,4 +118,9 @@ h1 {
   margin-bottom: 0;
   text-align: center;
   font-family: 'Barrio', Georgia, cursive;
+}
+
+.wt {
+  width: 100% !important;
+  margin: 30px 0 0 0;
 }
