--- a/style.css
+++ b/style.css
@@ -40,15 +40,14 @@ body {
   margin: 0;
   padding: 0;
   background-color: #121212;
+  background: url('./bg.jpg') no-repeat fixed center;
+  user-select: none;
 }
 
 #container {
   position: relative;
   z-index: 1;
   width: 100%;
-  height: 100%;
-  width: 100vw;
-  height: 100vh;
 }
 
 canvas {
@@ -111,8 +110,7 @@ main {
   margin-bottom: 20px;
 }
 
-h1 {
-  font-size: 2rem;
+.header {
   color: #f4ead5;
   margin-top: 0;
   margin-bottom: 0;
